# fortran-workshop

./: .editorconfig  .fprettify.rc  .gitignore  CMakeLists.txt  CMakePresets.json  README-VS-Code.md  README.md  requirements.txt
cmake/: compiler_flags.cmake  find-test-drive  python_dependencies.cmake
docs/: README-VS-Code.md  README-Visual-Studio.md
src/common/: CMakeLists.txt  m_precision.f90
src/hello_world/: CMakeLists.txt
src/hello_world/hello_world/: m_hello_world.f90
src/hello_world_app/: CMakeLists.txt  main.f90
src/hello_world_app/hello_world_lib/: CMakeLists.txt  m_hello_world.f90
src/logging_demo/: CMakeLists.txt  main.f90
src/logging_demo/logging/: CMakeLists.txt  m_logging.f90  m_logging_factory.f90
src/performance_demo/: CMakeLists.txt  main.f90
src/performance_demo/performance/: CMakeLists.txt  m_stopwatch.f90
src/vector/: CMakeLists.txt  m_vector.f90
test/: main.f90  test_hello_world.f90  test_vector_lib.f90
